--- a/l10n/ja.json
+++ b/l10n/ja.json
@@ -1,6 +1,6 @@
 { "translations": {
     "New note" : "新しいノート",
-    "Note is currently saving. Leaving the page will delete all changes!" : "ノートを保存しています。このページから移動する場合は全ての変更が削除されます！",
+    "Note is currently saving. Leaving the page will delete all changes!" : "ノートを保存しています。このページから移動すると全ての変更が失われます！",
     "_%n word_::_%n words_" : ["%n 単語"],
     "Delete note" : "ノートを削除",
     "Favorite" : "お気に入り"
