--- a/l10n/gl.json
+++ b/l10n/gl.json
@@ -1,7 +1,8 @@
 { "translations": {
-    "Notes" : "Notas",
     "New note" : "Nova nota",
-    "Note is currently saving. Leaving " : "Agora está gardando a nota. Abandonando",
-    "Delete note" : "Eliminar nota"
+    "Note is currently saving. Leaving the page will delete all changes!" : "Agora está gardando a nota. Abandonar a páxina eliminará todos os cambios.",
+    "_%n word_::_%n words_" : ["%n palabra","%n palabras"],
+    "Delete note" : "Eliminar nota",
+    "Favorite" : "Favorito"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
