[tx] updated from transifex

--- a/l10n/id.json
+++ b/l10n/id.json
@@ -1,5 +1,6 @@
 { "translations": {
     "New note" : "Catatan baru",
+    "Note is currently saving. Leaving the page will delete all changes!" : "Catatan saat ini sedang disimpan. Meninggalkan halaman akan menghapus semua perubahan!",
     "_%n word_::_%n words_" : ["%n kata"],
     "Delete note" : "Hapus catatan",
     "Favorite" : "Favorit"
