[tx] updated from transifex

--- a/l10n/it.json
+++ b/l10n/it.json
@@ -1,8 +1,8 @@
 { "translations": {
     "New note" : "Nuova nota",
     "Note is currently saving. Leaving the page will delete all changes!" : "La nota è in corso di salvataggio. Uscita. Se lasci la pagina perderai tutte le modifiche!",
-    "_%n word_::_%n words_" : ["%n parola","%n parole"],
+    "_%n word_::_%n words_" : ["%n parola","%n parole","%n parole"],
     "Delete note" : "Elimina nota",
     "Favorite" : "Preferito"
-},"pluralForm" :"nplurals=2; plural=(n != 1);"
+},"pluralForm" :"nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
