--- a/l10n/es.json
+++ b/l10n/es.json
@@ -1,8 +1,7 @@
 { "translations": {
     "New note" : "Nueva nota",
     "Note is currently saving. Leaving the page will delete all changes!" : "Note está guardando la información. Si cierra esta página SE BORRARÁN los cambios.",
-    "_%n word_::_%n words_" : ["%n palabra","%n palabras"],
     "Delete note" : "Eliminar nota",
     "Favorite" : "Favorito"
-},"pluralForm" :"nplurals=2; plural=(n != 1);"
+},"pluralForm" :"nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
