--- a/l10n/fr.json
+++ b/l10n/fr.json
@@ -1,8 +1,8 @@
 { "translations": {
     "New note" : "Nouvelle note",
     "Note is currently saving. Leaving the page will delete all changes!" : "Note en cours de sauvegarde. Quitter la page supprimera tous les changements !",
-    "_%n word_::_%n words_" : ["%n mot","%n mots"],
+    "_%n word_::_%n words_" : ["%n mot","%n mots","%n mots"],
     "Delete note" : "Supprimer la note",
     "Favorite" : "Ajouter aux favoris"
-},"pluralForm" :"nplurals=2; plural=(n > 1);"
+},"pluralForm" :"nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
