[tx] updated from transifex

--- a/l10n/es_MX.json
+++ b/l10n/es_MX.json
@@ -1,6 +1,7 @@
 { "translations": {
     "New note" : "Nueva nota",
     "Note is currently saving. Leaving the page will delete all changes!" : "La nota se está guardando. Al salir de la página se perderán todos los cambios!",
+    "_%n word_::_%n words_" : ["%n palabra","%n palabras","%n palabras"],
     "Delete note" : "Eliminar nota",
     "Favorite" : "Favorito"
 },"pluralForm" :"nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
