--- a/l10n/bg_BG.json
+++ b/l10n/bg_BG.json
@@ -1,6 +1,6 @@
 { "translations": {
     "New note" : "Нова бележка",
-    "Note is currently saving. Leaving the page will delete all changes!" : "В момента се запазва бележка. Напускането на тази страница ще изтрие всички промени!",
+    "Note is currently saving. Leaving the page will delete all changes!" : "Бележката се запазва в момента. Напускането на страницата ще изтрие всички промени!",
     "_%n word_::_%n words_" : ["%n дума","%n думи"],
     "Delete note" : "Изтриване на бележка",
     "Favorite" : "Любими"
