[tx] updated from transifex

--- a/l10n/he.json
+++ b/l10n/he.json
@@ -4,5 +4,5 @@
     "_%n word_::_%n words_" : ["%n מילה","%n מילים","%n מילים"],
     "Delete note" : "מחיקת הערה",
     "Favorite" : "מועדף"
-},"pluralForm" :"nplurals=3; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: (n % 10 == 0 && n % 1 == 0 && n > 10) ? 2 : 3;"
+},"pluralForm" :"nplurals=3; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: 2;"
 }
