[tx] updated from transifex

--- a/l10n/zh_HK.json
+++ b/l10n/zh_HK.json
@@ -1,7 +1,8 @@
 { "translations": {
-    "Notes" : "筆記",
     "New note" : "新筆記",
+    "Note is currently saving. Leaving the page will delete all changes!" : "正在保存笔记，离开页面将会放弃所有更改！",
     "_%n word_::_%n words_" : ["%n 字"],
-    "Delete note" : "刪除筆記"
+    "Delete note" : "刪除筆記",
+    "Favorite" : "我的最愛"
 },"pluralForm" :"nplurals=1; plural=0;"
 }
