--- a/l10n/zh-Hans.json
+++ b/l10n/zh-Hans.json
@@ -1,10 +1,8 @@
-OC.L10N.register(
-    "notes",
-    {
+{ "translations": {
     "New note" : "新筆記",
     "Note is currently saving. Leaving the page will delete all changes!" : "正在保存笔记，离开页面将会放弃所有更改！",
     "_%n word_::_%n words_" : ["%n 字"],
-    "Delete note" : "刪除筆記",
+    "Delete note" : "删除笔记",
     "Favorite" : "我的最愛"
-},
-"nplurals=1; plural=0;");
+},"pluralForm" :"nplurals=1; plural=0;"
+}
